# codeOath

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  ROADMAP.md
docs/: README.md  ai-workflow.md  enforce.md  grow.md  start.md
docs/languages/: python.md  rust.md
docs/meta/: decisions.md  github_social-preview.html  style-guide.md  todo.md
examples/: README.md
examples/stage-1/expense-tracker/: .gitignore  AGENTS.md  pyproject.toml
examples/stage-1/expense-tracker/docs/: todo.md
examples/stage-1/expense-tracker/expense_tracker/: cli.py  expenses.py  storage.py
examples/stage-1/expense-tracker/tests/: test_expenses.py
examples/stage-2a/expense-tracker/: .gitignore  AGENTS.md  README.md  pyproject.toml
examples/stage-2a/expense-tracker/docs/: decisions.md  todo.md
examples/stage-2a/expense-tracker/expense_tracker/: main.py
examples/stage-2a/expense-tracker/expense_tracker/adapters/: cli.py  db.py
examples/stage-2a/expense-tracker/expense_tracker/domain/: models.py  ports.py
examples/stage-2a/expense-tracker/tests/: test_adapters.py  test_domain.py
examples/stage-2b/expense-tracker/: .gitignore  AGENTS.md  README.md  pyproject.toml
examples/stage-2b/expense-tracker/docs/: decisions.md  todo.md
examples/stage-2b/expense-tracker/expense_tracker/: main.py
examples/stage-2b/expense-tracker/expense_tracker/adapters/: cli.py  db.py
examples/stage-2b/expense-tracker/expense_tracker/domain/: models.py  ports.py  services.py
examples/stage-2b/expense-tracker/tests/: test_adapters.py  test_domain.py
examples/stage-3/expense-tracker/: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
examples/stage-3/expense-tracker/.claude/rules/: adapters.md  domain.md  tests.md
examples/stage-3/expense-tracker/.github/workflows/: ci.yml
examples/stage-3/expense-tracker/config/: settings.py
examples/stage-3/expense-tracker/docs/: todo.md
examples/stage-3/expense-tracker/docs/adr/: 0001-template.md  0002-sqlite-for-storage.md  0003-click-for-cli.md
examples/stage-3/expense-tracker/src/expense_tracker/: main.py
examples/stage-3/expense-tracker/src/expense_tracker/adapters/inbound/: cli.py
examples/stage-3/expense-tracker/src/expense_tracker/adapters/outbound/: sqlite_repo.py
examples/stage-3/expense-tracker/src/expense_tracker/application/: use_cases.py
examples/stage-3/expense-tracker/src/expense_tracker/domain/: models.py  ports.py
examples/stage-3/expense-tracker/tests/: test_adapters.py  test_application.py  test_domain.py
experiments/: README.md
(+96 files in other folders)
