[project]
name = "expense-tracker"
version = "0.1.0"
requires-python = ">=3.14"

[project.scripts]
expense-tracker = "expense_tracker.cli:main"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "B", "S", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest", "ruff"]
