[project]
name = "expense-tracker"
version = "0.1.0"
description = "Track your expenses from the terminal."
requires-python = ">=3.14"

[project.scripts]
expense-tracker = "expense_tracker.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest", "ruff"]
