[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "expense-tracker"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
    "import-linter>=2.0",
    "pre-commit>=4.0",
]

[project.scripts]
expense = "expense_tracker.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/expense_tracker"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.importlinter]
root_packages = ["expense_tracker"]

[[tool.importlinter.contracts]]
name = "Domain must not import adapters or application"
type = "forbidden"
source_modules = ["expense_tracker.domain"]
forbidden_modules = ["expense_tracker.adapters", "expense_tracker.application"]

[[tool.importlinter.contracts]]
name = "Application must not import adapters"
type = "forbidden"
source_modules = ["expense_tracker.application"]
forbidden_modules = ["expense_tracker.adapters"]
